--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
-.border-box {
-    border: 1px;
-    border-style: solid;
-    border-color: black;
-    margin: 1em;
-    padding: 1em;
+body {
+    background-color:rgb(179, 208, 208);
 }
+
+
