--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,8 +1,11 @@
 .nav-bar {
-    display: grid;
+    display: flex;
     background-color:white;
+    width: 100%;
+    height: 75px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 21px;
+    position: sticky;
    
 }
 
