edited/styled create button and like/dislike buttons

--- a/src/Components/CreatePost/CreatePost.css
+++ b/src/Components/CreatePost/CreatePost.css
@@ -16,6 +16,9 @@
 .create-button{
     border-radius: 12px;
     border-color: darkgrey;
-    background-color: darkgrey;
+    background-color: rgb(179, 208, 208);
+    display: flex;
+    margin-left: 88%;
+
 }
 
